# findevil-agent

./: .dockerignore  .env.example  .gitignore  ACCURACY_REPORT.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DATASET.md  DEVPOST_WRITEUP.md  Dockerfile  GAP_ANALYSIS.md  MANIFEST.in  MCP_TEST_REPORT.md  MEMORYGRAPH.md  PLANS.md  README.md  RECOMMENDATIONS.md  SECURITY.md  evidence_manifest.json  pyproject.toml  requirements.txt  run_tests.py  test_summary.json
.github/workflows/: ci.yml
config/: server.toml  tools.toml
docs/: accuracy_report.md  architecture_diagram.py  dataset_documentation.md  demo-script.md  generate-png.py
scripts/: _compute_gt_hashes.py  generate_ground_truth_image.sh  generate_test_evidence.sh  run_accuracy_benchmark.py  run_agent.sh  setup.sh
src/: __init__.py  __main__.py  _version.py  cli.py  models.py  server.py
src/agent/: __init__.py  groq_client.py  loop.py  output_parser.py  prompts.py  tool_selector.py
src/tools/: __init__.py  carving.py  correlation.py  filesystem.py  hashing.py  memory.py  network.py  patterns.py  registry.py  timeline.py  tool_resolver.py
tests/: conftest.py  ground_truth_helpers.py  helpers.py  test_cli.py  test_correlation.py  test_edge_cases.py  test_forensic_tools.py  test_groq_client.py  test_ground_truth.py  test_property_based.py  test_server.py  test_workflow.py
