[project]
name = "findevil-agent"
version = "2.0.0"
description = "Autonomous DFIR analysis agent — Find Evil! Hackathon submission. Powered by Groq AI + SIFT Workstation + Custom MCP Server."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Find Evil Team"},
]
keywords = ["dfir", "forensics", "incident-response", "mcp", "ai-security", "groq", "digital-forensics"]

dependencies = [
    "fastmcp>=0.1.0",
    "pydantic>=2.0,<3.0",
    "httpx>=0.27.0",
    "groq>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "coverage>=7.0",
]
full = [
    "volatility3",
    "regipy",
]

[project.scripts]
findevil = "src.cli:main"
findevil-server = "src.server:main"
findevil-agent = "src.agent.cli:main"

[project.entry-points.mcp]
findevil = "src.server:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
