[project]
name = "findevil-agent"
version = "2.1.4"
description = "Autonomous DFIR analysis agent — 22 MCP forensic tools, Groq AI integration, deterministic mode (no API key), 107 passing tests, CI/CD, Docker. Covers memory/disk/registry/network forensics."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Ali Zafar", email = "alizafar780@users.noreply.github.com"},
]
keywords = [
    "dfir", "forensics", "incident-response", "mcp", "ai-security",
    "groq", "digital-forensics", "sleuthkit", "volatility",
    "security-automation"
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Recovery Tools",
    "Topic :: Utilities",
]

dependencies = [
    "fastmcp>=0.1.0",
    "pydantic>=2.0,<3.0",
    "httpx>=0.27.0",
    "groq>=1.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
core = [
    "volatility3>=2.0.0",
    "regipy>=6.0.0",
]
full = [
    "findevil-agent[core]",
    # Heavy deps (optional — not installed by default):
    # torch, pyarrow, plotly, jupyter, h5py, lxml
]
ai = [
    # Future: deep learning model dependencies
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23.0",
    "hypothesis>=6.0",
    "black>=24.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "coverage>=7.0",
    "pre-commit>=3.0.0",
]
all = [
    "findevil-agent[dev,core]",
]

[project.urls]
Homepage = "https://github.com/AliZafar780/findevil-agent"
Repository = "https://github.com/AliZafar780/findevil-agent"
Issues = "https://github.com/AliZafar780/findevil-agent/issues"
Changelog = "https://github.com/AliZafar780/findevil-agent/blob/main/CHANGELOG.md"

[project.scripts]
findevil = "src.cli:main"
findevil-server = "src.server:main"

[project.entry-points.mcp]
findevil = "src.server:main"

[tool.setuptools]
packages = ["src", "src.agent", "src.tools"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
# CLI has ASCII art banners and argparse help texts that exceed line length
"src/cli.py" = ["E501", "W291", "W293"]
# Server has long tool descriptions for MCP tool definitions
"src/server.py" = ["E501", "W291", "W293"]
# Agent files have long docstrings and system prompts
"src/agent/*.py" = ["E501"]
# Tool files have long function signatures and help text
"src/tools/*.py" = ["E501", "W291", "W293"]

[tool.mypy]
strict = true
ignore_missing_imports = true
python_version = "3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "module"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "network: marks tests that need network access",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
